# connect-two-rs

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  renderer.rs
game/: Cargo.toml
game/src/: lib.rs  player.rs  state.rs
solver/: Cargo.toml
solver/src/: agent.rs  encoding.rs  main.rs  reward.rs
tests/: cli.bats
